--- a/Birds.html
+++ b/Birds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yoham Speech App</title>
+    <title>Tamil Learning App</title>
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
     <style>
         * {
@@ -138,7 +138,7 @@
                         startTraining();
                     });
                 }
-            }, 10000);
+            }, 7000);
 
             recognition.onresult = (event) => {
                 clearTimeout(timeout);
