--- a/Games.html
+++ b/Games.html
@@ -77,11 +77,11 @@
         <img src="assets/images/dashboard/vegetable.jpeg" alt="More Animals">
         <p>காய்கறிகள்</p>
     </div>
-    <div class="option" onclick="speakAndGo('breakfast.html', 'இப்போது காலை உணவு பயிற்சிக்கு செல்லலாம்')">
+    <div class="option" onclick="speakAndGo('Breakfast.html', 'இப்போது காலை உணவு பயிற்சிக்கு செல்லலாம்')">
       <img src="assets/images/breakfast bg.jpg" alt="Breakfast">
       <p>காலை உணவு</p>
     </div>
-    <div class="option" onclick="speakAndGo('lunch.html', 'இப்போது மதிய உணவு பயிற்சிக்கு செல்லலாம்')">
+    <div class="option" onclick="speakAndGo('Lunch.html', 'இப்போது மதிய உணவு பயிற்சிக்கு செல்லலாம்')">
       <img src="assets/images/lunch bg.jpg" alt="Lunch">
       <p>மதிய உணவு</p>
     </div>
