--- a/Games.html
+++ b/Games.html
@@ -73,8 +73,8 @@
       <img src="assets/images/dashboard/fruits.jpg" alt="Fruits">
       <p>பழங்கள்</p>
     </div>
-      <div class="option" onclick="speakAndGo('MoreAnimals.html', 'மேலும் விலங்குகள் பயிற்சிக்கு செல்லலாம்')">
-        <img src="assets/images/dashboard/vegetable.jpeg" alt="More Animals">
+      <div class="option" onclick="speakAndGo('Vegetables.html', 'காய்கறிகள் பயிற்சிக்கு செல்லலாம்')">
+        <img src="assets/images/dashboard/vegetable.jpeg" alt="Vegetables">
         <p>காய்கறிகள்</p>
     </div>
     <div class="option" onclick="speakAndGo('Breakfast.html', 'இப்போது காலை உணவு பயிற்சிக்கு செல்லலாம்')">
