--- a/Games.html
+++ b/Games.html
@@ -85,7 +85,7 @@
       <img src="assets/images/lunch bg.jpg" alt="Lunch">
       <p>மதிய உணவு</p>
     </div>
-    <div class="option" onclick="speakAndGo('dinner.html', 'இப்போது இரவு உணவு பயிற்சிக்கு செல்லலாம்')">
+    <div class="option" onclick="speakAndGo('Dinner.html', 'இப்போது இரவு உணவு பயிற்சிக்கு செல்லலாம்')">
       <img src="assets/images/dinner bg.jpg" alt="Dinner">
       <p>இரவு உணவு</p>
     </div>
