--- a/Dinner.html
+++ b/Dinner.html
@@ -63,9 +63,9 @@
     </div>
 
     <div class="container" id="training" style="display: none;">
-        <img id="BreakfastImage" src="assets/images/breakfast bg.jpg" alt="Training">
+        <img id="DinnerImage" src="assets/images/dinner bg.jpg" alt="Training">
         <h2>தமிழில் இரவு உணவு வகைகள்</h2>
-        <p id="BreakfastName"></p>
+        <p id="DinnerName"></p>
         <button onclick="startTraining()">பயிற்சி தொடங்குக</button>
     </div>
 
@@ -75,7 +75,7 @@
     </div>
 
     <script>
-        const breakfasts = [
+        const dinners = [
             { name: "இட்லி", image: "assets/images/dashboard/இட்லி.jpg" },
             { name: "தோசை", image: "assets/images/dashboard/தோசை.jpg" },
             { name: "வடை", image: "assets/images/dashboard/வடை.jpg" },
@@ -109,12 +109,12 @@
         }
 
         function startTraining() {
-            if (index < breakfasts.length) {
-                let breakfast = breakfasts[index];
-                document.getElementById('BreakfastName').innerText = breakfast.name;
-                document.getElementById('BreakfastImage').src = breakfast.image;
+            if (index < dinners.length) {
+                let dinner = dinners[index];
+                document.getElementById('DinnerName').innerText = dinner.name;
+                document.getElementById('DinnerImage').src = dinner.image;
                 attempts = 0;
-                speak(breakfast.name, () => verifyUserSpeech(breakfast.name));
+                speak(dinner.name, () => verifyUserSpeech(dinner.name));
             } else {
                 speak("நன்றி! தமிழில் இரவு உணவு வகைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!", () => showPage("thankYou"));
             }
