--- a/Birds.html
+++ b/Birds.html
@@ -1,179 +1,178 @@
 <!DOCTYPE html>
 <html lang="ta">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamil Learning App</title>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
-            width: 100%;
-            font-family: 'Times New Roman', serif;
-            background-color: darkblue;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            width: 90%;
-            max-width: 500px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            text-align: center;
-        }
-        button {
-            background-color: lightblue;
-            color: black;
-            border: none;
-            padding: 15px 25px;
-            font-size: 20px;
-            margin: 15px 0;
-            border-radius: 10px;
-            cursor: pointer;
-            width: 80%;
-        }
-        button:hover {
-            background-color: deepskyblue;
-        }
-        img {
-            width: 100%;
-            max-width: 300px;
-            margin: 20px auto;
-            display: block;
-            border-radius: 10px;
-        }
-        h1, h2, p {
-            margin-bottom: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>தமிழ் பறவைகள் பயிற்சி</title>
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      width: 100%;
+      font-family: 'Times New Roman', serif;
+      background-color: darkgreen;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      width: 90%;
+      max-width: 500px;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      text-align: center;
+    }
+    button {
+      background-color: lightgreen;
+      color: black;
+      border: none;
+      padding: 15px 25px;
+      font-size: 20px;
+      margin: 15px 0;
+      border-radius: 10px;
+      cursor: pointer;
+      width: 80%;
+    }
+    button:hover { background-color: limegreen; }
+    img {
+      width: 100%;
+      max-width: 300px;
+      margin: 20px auto;
+      display: block;
+      border-radius: 10px;
+    }
+    h1, h2, p { margin-bottom: 20px; }
+  </style>
 </head>
 <body>
-    <div class="container" id="welcome">
-        <img src="assets/images/dashboard/birds.jpg" alt="Welcome">
-        <h1>மதிய வணக்கம்</h1>
-        <button onclick="loginUser()">உள்நுழை</button>
-    </div>
+  <div class="container" id="welcome">
+    <img src="assets/images/dashboard/birds.jpg" alt="Welcome">
+    <h1>வணக்கம்!</h1>
+    <button onclick="loginUser()">உள்நுழை</button>
+  </div>
 
-    <div class="container" id="training" style="display: none;">
-        <img id="BirdImage" src="assets/images/FirstPage/BirdsFirstPage.jpeg" alt="Training">
-        <h2>தமிழில் பறவைகள்</h2>
-        <p id="BirdName"></p>
-        <button onclick="startTraining()">பயிற்சி தொடங்குக</button>
-    </div>
+  <div class="container" id="training" style="display: none;">
+    <img id="BirdImage" src="" alt="Bird" />
+    <h2>தமிழில் பறவைகள்</h2>
+    <p id="BirdName"></p>
+  </div>
 
-    <div class="container" id="thankYou" style="display: none;">
-        <img src="assets/images/wallpapers/logo.png" alt="Thank You">
-        <h2>நன்றி! தமிழில் பறவைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
-    </div>
+  <div class="container" id="thankYou" style="display: none;">
+    <img src="assets/images/wallpapers/logo.png" alt="Thank You" />
+    <h2>நன்றி! தமிழில் பறவைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
+  </div>
 
-    <script>
-        const birds = [
-            { name: "காகம்", image: "assets/images/Birds/crow.jpg" },
-            { name: "கோழி", image: "assets/images/Birds/hen1.jpg" },
-            { name: "சேவல்", image: "assets/images/Birds/hen2.jpg" },
-            { name: "மயில்", image: "assets/images/Birds/peacock.jpg" },
-            { name: "புறா", image: "assets/images/Birds/pegion.jpg" },
-            { name: "கழுகு", image: "assets/images/Birds/eagle.jpg" },
-            { name: "வாத்து", image: "assets/images/Birds/duck.jpg" },
-            { name: "ஆந்தை", image: "assets/images/Birds/owl.jpg" },
-            { name: "கிளி", image: "assets/images/Birds/parrot.jpg" }
-        ];
+  <script>
+    const birds = [
+      { name: "காகம்", image: "assets/images/Birds/crow.jpg" },
+      { name: "புறா", image: "assets/images/Birds/pigeon.jpg" },
+      { name: "நாத்தான்", image: "assets/images/Birds/duck.jpg" },
+      { name: "சேவல்", image: "assets/images/Birds/rooster.jpg" },
+      { name: "வாத்து", image: "assets/images/Birds/goose.jpg" },
+      { name: "கிளி", image: "assets/images/Birds/parrot.jpg" },
+      { name: "ஆந்தை", image: "assets/images/Birds/owl.jpg" },
+      { name: "தும்பி", image: "assets/images/Birds/dragonfly.jpg" },
+      { name: "மயில்", image: "assets/images/Birds/peacock.jpg" }
+    ];
 
-        let index = 0;
-        let attempts = 0;
-        const maxAttempts = 3;
+    let index = 0;
+    let attempts = 0;
+    const maxAttempts = 2;
 
-        function showPage(pageId) {
-            document.querySelectorAll('.container').forEach(el => el.style.display = 'none');
-            document.getElementById(pageId).style.display = 'block';
-        }
+    function showPage(id) {
+      document.querySelectorAll('.container').forEach(el => el.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
+    }
 
-        function loginUser() {
-            alert("உள்நுழைவு வெற்றிகரமாக முடிந்தது!");
-            showPage("training");
-        }
+    function loginUser() {
+      alert("உள்நுழைவு வெற்றிகரமாக முடிந்தது!");
+      showPage("training");
+      startTraining();
+    }
 
-        function speak(text, callback) {
-            responsiveVoice.speak(text, "Tamil Female", {
-                onend: callback
+    function speak(text, callback) {
+      responsiveVoice.speak(text, "Tamil Female", { onend: callback });
+    }
+
+    function startTraining() {
+      if (index >= birds.length) {
+        speak("நன்றி! தமிழில் பறவைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!", () => showPage("thankYou"));
+        return;
+      }
+
+      const bird = birds[index];
+      document.getElementById("BirdImage").src = bird.image;
+      document.getElementById("BirdName").innerText = bird.name;
+
+      attempts = 0;
+      speak(bird.name, () => listenForSpeech(bird.name));
+    }
+
+    function listenForSpeech(correctWord) {
+      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'ta-IN';
+      recognition.interimResults = false;
+      recognition.maxAlternatives = 1;
+
+      let hasResponded = false;
+
+      recognition.onresult = (event) => {
+        if (hasResponded) return;
+        hasResponded = true;
+        const result = event.results[0][0].transcript.trim();
+
+        if (result === correctWord) {
+          speak("சரியாக உள்ளது. அடுத்தது.", () => {
+            index++;
+            startTraining();
+          });
+        } else {
+          attempts++;
+          if (attempts < maxAttempts) {
+            speak("மீண்டும் முயற்சிக்கவும்: " + correctWord, () => listenForSpeech(correctWord));
+          } else {
+            speak("அடுத்த பறவைக்கு செல்லலாம்.", () => {
+              index++;
+              startTraining();
             });
+          }
         }
+      };
 
-        function startTraining() {
-            if (index < birds.length) {
-                let bird = birds[index];
-                document.getElementById('BirdName').innerText = bird.name;
-                document.getElementById('BirdImage').src = bird.image;
-                attempts = 0;
-                speak(bird.name, () => verifyUserSpeech(bird.name));
-            } else {
-                speak("நன்றி! தமிழில் விலங்குகள் நீங்கள் கற்றுக்கொண்டீர்கள்!", () => showPage("thankYou"));
-            }
+      recognition.onerror = () => {
+        if (hasResponded) return;
+        hasResponded = true;
+        attempts++;
+        if (attempts < maxAttempts) {
+          speak("மீண்டும் முயற்சிக்கவும்: " + correctWord, () => listenForSpeech(correctWord));
+        } else {
+          speak("அடுத்த பறவைக்கு செல்லலாம்.", () => {
+            index++;
+            startTraining();
+          });
         }
+      };
 
-        function verifyUserSpeech(correctWord) {
-            let recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-            recognition.lang = 'ta-IN';
-            recognition.interimResults = false;
-            recognition.maxAlternatives = 1;
+      recognition.start();
 
-            recognition.start();
-
-            let timeout = setTimeout(() => {
-                recognition.stop();
-                if (attempts < maxAttempts) {
-                    attempts++;
-                    speak("மீண்டும் சொல்லுங்கள்: " + correctWord, () => verifyUserSpeech(correctWord));
-                } else {
-                    speak("அடுத்த வார்த்தைக்கு செல்லலாம்.", () => {
-                        index++;
-                        startTraining();
-                    });
-                }
-            }, 10000);
-
-            recognition.onresult = (event) => {
-                clearTimeout(timeout);
-                let result = event.results[0][0].transcript.trim();
-                if (result === correctWord) {
-                    speak("நன்றாகப் பேசினீர்! அடுத்தது.", () => {
-                        index++;
-                        startTraining();
-                    });
-                } else {
-                    if (attempts < maxAttempts) {
-                        attempts++;
-                        speak("மீண்டும் முயற்சி செய்யுங்கள்: " + correctWord, () => verifyUserSpeech(correctWord));
-                    } else {
-                        speak("அடுத்த வார்த்தைக்கு செல்லலாம்.", () => {
-                            index++;
-                            startTraining();
-                        });
-                    }
-                }
-            };
-
-            recognition.onerror = () => {
-                clearTimeout(timeout);
-                if (attempts < maxAttempts) {
-                    attempts++;
-                    speak("மீண்டும் சொல்லுங்கள்: " + correctWord, () => verifyUserSpeech(correctWord));
-                } else {
-                    speak("அடுத்த வார்த்தைக்கு செல்லலாம்.", () => {
-                        index++;
-                        startTraining();
-                    });
-                }
-            };
+      setTimeout(() => {
+        if (!hasResponded) {
+          recognition.stop();
+          attempts++;
+          if (attempts < maxAttempts) {
+            speak("மீண்டும் சொல்லுங்கள்: " + correctWord, () => listenForSpeech(correctWord));
+          } else {
+            speak("அடுத்த பறவைக்கு செல்லலாம்.", () => {
+              index++;
+              startTraining();
+            });
+          }
         }
-    </script>
+      }, 10000);
+    }
+  </script>
 </body>
 </html>
