--- a/Vegetables.html
+++ b/Vegetables.html
@@ -1,93 +1,163 @@
+<!-- Save as vegetables.html -->
 <!DOCTYPE html>
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>தமிழ் காய்கறிகள்</title>
+  <title>Vegetables in Tamil</title>
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #d1ffbd, #bdf7ff);
-      text-align: center;
-      padding: 20px;
-    }
-    h1 {
-      color: #2e7d32;
-    }
-    #vegetable-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    #vegetable-image {
-      max-width: 300px;
-      height: auto;
-      margin: 20px 0;
-      border: 5px solid #2e7d32;
-      border-radius: 10px;
-    }
-    .nav-buttons {
+    /* same style as your animals app */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      height: 100%; width: 100%;
+      font-family: 'Times New Roman', serif;
+      background-color: darkgreen;
+      color: white;
       display: flex;
       justify-content: center;
-      gap: 30px;
+      align-items: center;
+    }
+    .container {
+      width: 90%; max-width: 500px;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      text-align: center;
     }
     button {
-      padding: 10px 20px;
-      font-size: 18px;
+      background-color: lightgreen;
+      color: black;
       border: none;
-      border-radius: 8px;
-      background-color: #4caf50;
-      color: white;
+      padding: 15px 25px;
+      font-size: 20px;
+      margin: 15px 0;
+      border-radius: 10px;
       cursor: pointer;
+      width: 80%;
     }
-    button:hover {
-      background-color: #388e3c;
+    button:hover { background-color: limegreen; }
+    img {
+      width: 100%; max-width: 300px;
+      margin: 20px auto; display: block;
+      border-radius: 10px;
     }
+    h1, h2, p { margin-bottom: 20px; }
   </style>
 </head>
 <body>
-  <h1>தமிழில் காய்கறிகள்</h1>
-  <div id="vegetable-container">
-    <img id="vegetable-image" src="" alt="Vegetable">
-    <h2 id="vegetable-name"></h2>
-    <div class="nav-buttons">
-      <button onclick="prevVegetable()">முந்தையது</button>
-      <button onclick="nextVegetable()">அடுத்தது</button>
-    </div>
+  <div class="container" id="welcome">
+    <img src="assets/images/dashboard/vegetables.jpg" alt="Welcome">
+    <h1>வணக்கம்</h1>
+    <button onclick="loginUser()">தொடங்கவும்</button>
+  </div>
+
+  <div class="container" id="training" style="display: none;">
+    <img id="vegImage" src="" alt="Training">
+    <h2>தமிழில் காய்கறிகள்</h2>
+    <p id="vegName"></p>
+  </div>
+
+  <div class="container" id="thankYou" style="display: none;">
+    <img src="assets/images/wallpapers/logo.png" alt="Thank You">
+    <h2>நன்றி! காய்கறிகளை கற்றுக்கொண்டீர்கள்!</h2>
   </div>
 
   <script>
     const vegetables = [
-      { name: "வெங்காயம்", image: "assets/images/Vegetables/onion.jpg" },
-      { name: "தக்காளி", image: "assets/images/Vegetables/tomato.jpg" },
-      { name: "முள்ளங்கி", image: "assets/images/Vegetables/radish.jpg" },
-      { name: "கேரட்", image: "assets/images/Vegetables/carrot.jpg" },
-      { name: "பீர்க்கங்காய்", image: "assets/images/Vegetables/snakegourd.jpg" },
-      { name: "புடலங்காய்", image: "assets/images/Vegetables/ashgourd.jpg" },
-      { name: "வெண்டைக்காய்", image: "assets/images/Vegetables/ladyfinger.jpg" },
-      { name: "பாகற்காய்", image: "assets/images/Vegetables/bittergourd.jpg" }
+      { name: "வெண்டைக்காய்", image: "assets/images/vegetables/ladies_finger.jpg" },
+      { name: "வெங்காயம்", image: "assets/images/vegetables/onion.jpg" },
+      { name: "மிளகாய்", image: "assets/images/vegetables/chilli.jpg" },
+      { name: "பூசணிக்காய்", image: "assets/images/vegetables/pumpkin.jpg" },
+      { name: "கத்தரிக்காய்", image: "assets/images/vegetables/brinjal.jpg" },
+      { name: "தக்காளி", image: "assets/images/vegetables/tomato.jpg" },
+      { name: "முருங்கைக்காய்", image: "assets/images/vegetables/drumstick.jpg" },
+      { name: "உருளைக்கிழங்கு", image: "assets/images/vegetables/potato.jpg" },
+      { name: "மஞ்சள்", image: "assets/images/vegetables/turmeric.jpg" },
+      { name: "கோசு", image: "assets/images/vegetables/cabbage.jpg" }
     ];
 
-    let currentIndex = 0;
+    const maxAttempts = 10;
+    let index = 0;
 
-    function showVegetable(index) {
-      const veg = vegetables[index];
-      document.getElementById('vegetable-image').src = veg.image;
-      document.getElementById('vegetable-name').textContent = veg.name;
+    function loginUser() {
+      alert("உள்நுழைவு வெற்றிகரமாக முடிந்தது!");
+      showPage("training");
+      startTraining();
     }
 
-    function prevVegetable() {
-      currentIndex = (currentIndex - 1 + vegetables.length) % vegetables.length;
-      showVegetable(currentIndex);
+    function showPage(id) {
+      document.querySelectorAll(".container").forEach(el => el.style.display = "none");
+      document.getElementById(id).style.display = "block";
     }
 
-    function nextVegetable() {
-      currentIndex = (currentIndex + 1) % vegetables.length;
-      showVegetable(currentIndex);
+    function speak(text) {
+      return new Promise(resolve => {
+        responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
+      });
     }
 
-    // Initialize first vegetable
-    showVegetable(currentIndex);
+    function listen() {
+      return new Promise((resolve, reject) => {
+        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        recognition.lang = "ta-IN";
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+
+        let timeout = setTimeout(() => {
+          recognition.abort();
+          reject("timeout");
+        }, 10000);
+
+        recognition.onresult = (event) => {
+          clearTimeout(timeout);
+          resolve(event.results[0][0].transcript.trim());
+        };
+
+        recognition.onerror = () => {
+          clearTimeout(timeout);
+          reject("error");
+        };
+
+        recognition.start();
+      });
+    }
+
+    async function trainWord(wordObj) {
+      const { name, image } = wordObj;
+      document.getElementById("vegName").innerText = name;
+      document.getElementById("vegImage").src = image;
+
+      let attempts = 0;
+      while (attempts < maxAttempts) {
+        await speak(name);
+        try {
+          const userSaid = await listen();
+          if (userSaid === name) {
+            await speak("நன்றாகச் சொன்னீர்! அடுத்தது.");
+            return;
+          } else {
+            attempts++;
+            if (attempts < maxAttempts) {
+              await speak("மீண்டும் முயற்சி செய்யுங்கள்: " + name);
+            }
+          }
+        } catch (e) {
+          attempts++;
+          if (attempts < maxAttempts) {
+            await speak("தவறு. மீண்டும் முயற்சி செய்யுங்கள்: " + name);
+          }
+        }
+      }
+      await speak("அடுத்த வார்த்தைக்கு செல்லலாம்.");
+    }
+
+    async function startTraining() {
+      for (let i = 0; i < vegetables.length; i++) {
+        await trainWord(vegetables[i]);
+      }
+      await speak("நன்றி! காய்கறிகளை நீங்கள் கற்றுக்கொண்டீர்கள்!");
+      showPage("thankYou");
+    }
   </script>
 </body>
 </html>
