--- a/Birds.html
+++ b/Birds.html
@@ -76,7 +76,7 @@
     const birds = [
       { name: "காகம்", image: "assets/images/Birds/crow.jpg" },
       { name: "புறா", image: "assets/images/Birds/pigeon.jpg" },
-      { name: "நாத்தான்", image: "assets/images/Birds/duck.jpg" },
+      { name: "வாத்து", image: "assets/images/Birds/duck.jpg" },
       { name: "சேவல்", image: "assets/images/Birds/rooster.jpg" },
       { name: "வாத்து", image: "assets/images/Birds/goose.jpg" },
       { name: "கிளி", image: "assets/images/Birds/parrot.jpg" },
