--- a/Birds.html
+++ b/Birds.html
@@ -73,17 +73,18 @@
     </div>
 
     <script>
-    const birds = [
-      { name: "காகம்", image: "assets/images/Birds/crow.jpg" },
-      { name: "புறா", image: "assets/images/Birds/pigeon.jpg" },
-      { name: "வாத்து", image: "assets/images/Birds/duck.jpg" },
-      { name: "சேவல்", image: "assets/images/Birds/rooster.jpg" },
-      { name: "வாத்து", image: "assets/images/Birds/goose.jpg" },
-      { name: "கிளி", image: "assets/images/Birds/parrot.jpg" },
-      { name: "ஆந்தை", image: "assets/images/Birds/owl.jpg" },
-      { name: "தும்பி", image: "assets/images/Birds/dragonfly.jpg" },
-      { name: "மயில்", image: "assets/images/Birds/peacock.jpg" }
-    ];
+        const birds = [
+            { name: "காகம்", image: "assets/images/Birds/crow.jpg" },
+            { name: "கோழி", image: "assets/images/Birds/hen1.jpg" },
+            { name: "சேவல்", image: "assets/images/Birds/hen2.jpg" },
+            { name: "மயில்", image: "assets/images/Birds/peacock.jpg" },
+            { name: "புறா", image: "assets/images/Birds/pegion.jpg" },
+            { name: "கழுகு", image: "assets/images/Birds/eagle.jpg" },
+            { name: "வாத்து", image: "assets/images/Birds/duck.jpg" },
+            { name: "ஆந்தை", image: "assets/images/Birds/owl.jpg" },
+            { name: "கிளி", image: "assets/images/Birds/parrot.jpg" }
+        ];
+
 
         let index = 0;
         const maxAttempts = 10;
