--- a/Breakfast.html
+++ b/Breakfast.html
@@ -165,7 +165,7 @@
             for (let i = 0; i < breakfast.length; i++) {
                 await trainWord(breakfast[i]);
             }
-            await speak("நன்றி! தமிழில் விலங்குகள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
+            await speak("நன்றி! தமிழில் காலை உணவு வகைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
             showPage("thankYou");
         }
     </script>
