--- a/Breakfast.html
+++ b/Breakfast.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container" id="welcome">
-        <img src="assets/images/dashboard/breakfast bg.jpg" alt="Welcome">
+        <img src="assets/images/breakfast bg.jpg" alt="Welcome">
         <h1>காலை வணக்கம்</h1>
         <button onclick="loginUser()">உள்நுழை</button>
     </div>
